オンオフ機能を追加

--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +8,24 @@
 	<script src="js/popup.js"></script>
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css">
 	<link type="text/css" rel="stylesheet" href="css/popup.css">
+	<script src="js/bootstrap.min.js"></script>
+	<link type="text/css" rel="stylesheet" href="css/bootstrap-toggle.min.css">
+	<script src="css/bootstrap-toggle.min.js"></script>
 </head>
 <body>
 	<div class="settings container-fluid">
 		<h2>設定</h2>
+
+		<ul>
+			<li>
+				<label class="item_name">アンカ: </label>
+				<input type="checkbox" checked data-toggle="toggle" id="anchor">
+			</li>
+			<li>
+				<label class="item_name">カウンタ: </label>
+				<input type="checkbox" checked data-toggle="toggle" id="counter">
+			</li>
+		</ul>
 		<h3>三日月国</h3>
 		<ul>
 			<li>
